# TinyRender_mock

./: CMakeLists.txt  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  myopengl.cpp  myopengl.h
tinyrender/: CMakeLists.txt  geometry.h  render.cpp  render.h  tgaimage.h
